Change with checkbox, colors

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
                 </div>
                 <div class="input-group justify-content-between">
                     <span>
-                    <input type="checkbox" name="remember" class="form-check-label" style="color: blue !important;" />
-                    <label for="remember">Remember Me </label>
+                        <label class="container text-white-50">Remember Me
+                            <input type="checkbox" name="remember" class="form-check-label" />
+                            <span class="checkmark"></span>
+                          </label>
                     </span>
                     <span>
-                    <a href="#" class="btn-link text-white">Forget Password?</a>
+                    <a href="#" class="btn-link text-white-50">Forget Password?</a>
                     </span>
                 </div>
                 <div class="btn-right pt-3">
-                    <button type="submit" class="btn-submit">Login</button>
+                    <button type="submit" class="btn-sub">LogIn</button>
                 </div>
             </div>
         </div>
